--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="obstacle.js"></script>
     <script src="vehicle.js"></script>
     <script src="sketch.js"></script>
+    <script src="vehiculewander.js"></script>
+
+
 
 
   </head>
